--- a/components/products/Products.module.scss
+++ b/components/products/Products.module.scss
@@ -1,8 +1,77 @@
-// TODO: Products styles.
-
 .products {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  &__title {
+    margin-top: 3rem;
+    text-align: center;
+  }
+
+  &__menuLine {
+    border: 1px solid black;
+    width: 75vw;
+    margin-bottom: 3rem;
+  }
+
+  &__list {
+    display: grid;
+    grid-gap: 5rem;
+    grid-template-columns: repeat(auto-fit, 350px);
+    width: 100vw;
+    justify-content: center;
+  }
+
+  &__product {
+    width: 300px;
+    background-color: black;
     display: flex;
     flex-direction: column;
-    height: 100%;
-  
+    justify-content: space-between;
   }
+
+  &__productImage {
+    cursor: pointer;
+    height: 200px;
+    width: 300px;
+  }
+
+  &__productImg {
+    height: 200px;
+    object-fit: cover;
+    width: 300px;
+  }
+
+  &__productTitle {
+    color: white;
+    text-align: center;
+  }
+
+  &__line {
+    width: 200px;
+    border: 1px solid white;
+  }
+
+  &__productLower {
+    color: rgb(214, 191, 166);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 0 1rem;
+    position: relative;
+  }
+
+  &__productToBasket {
+    display: flex;
+    flex-directon: row;
+  }
+
+  &__productBasket {
+    height: 20px;
+    width: 20px;
+    position: relative;
+    margin-top: 15px;
+    margin-left: 1rem;
+  }
+
+}
