--- a/components/product/Product.module.scss
+++ b/components/product/Product.module.scss
@@ -64,7 +64,7 @@
 
     &__productToBasket {
         display: flex;
-        flex-directon: row;
+        flex-direction: row;
         padding: 0 1rem;
     }
 
