categories sýnilegt í header fyrir admin

--- a/components/products/Products.module.scss
+++ b/components/products/Products.module.scss
@@ -36,6 +36,11 @@
     width: 300px;
   }
 
+  &__productImageAdmin {
+    height: 200px;
+    width: 300px;
+  }
+
   &__productImg {
     height: 200px;
     object-fit: cover;
