--- a/components/paging/Paging.module.scss
+++ b/components/paging/Paging.module.scss
@@ -18,5 +18,7 @@
         flex-direction: row;
         justify-content: space-between;
         margin-bottom: 3rem;
+        width: 100px;
+        text-align: center;
     }
 }
